<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/layout_margin"
    android:layout_marginRight="@dimen/layout_margin"
    android:layout_marginTop="@dimen/layout_margin"
    android:orientation="vertical"
    tools:context="com.example.pk.lifestats.MainActivity">


    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/please_enter_the_name"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_view_margin"
        android:gravity="center"
        android:text="@string/please_enter_the_date"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/dayEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/day"
            android:inputType="numberSigned"
            android:maxLength="2" />

        <EditText
            android:id="@+id/monthEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/month"
            android:inputType="numberSigned"
            android:maxLength="2" />


        <EditText
            android:id="@+id/yearEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/year"
            android:inputType="numberSigned"
            android:maxLength="4" />


    </LinearLayout>

    <Button
        android:id="@+id/lifeStatsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/button_margin"
        android:layout_marginRight="@dimen/button_margin"
        android:layout_marginTop="@dimen/button_margin"
        android:text="@string/checked_life_stats" />
</LinearLayout>
