<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="com.example.pk.lifestats.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/layout_margin"
        android:layout_marginRight="@dimen/layout_margin"
        android:layout_marginTop="@dimen/layout_margin">

        <TextView
            android:text="@string/please_enter_the_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nameTextView"
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="@color/colorPrimary"/>

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <TextView
            android:text="@string/please_enter_the_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dateTextView"
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="@dimen/text_view_margin"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/dayEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/day"
                android:maxLength="2"
                android:inputType="numberSigned" />

            <EditText
                android:id="@+id/monthEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberSigned"
                android:hint="@string/month"
                android:maxLength="2"/>


            <EditText
                android:id="@+id/yearEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberSigned"
                android:hint="@string/year"
                android:maxLength="4"/>


        </LinearLayout>

        <Button
            android:id="@+id/lifeStatsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checked_life_stats"
            android:layout_marginTop="@dimen/button_margin"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginRight="@dimen/button_margin"/>
    </LinearLayout>

</LinearLayout>
